proyecto/calc-sintaxis.output
Terminales no usados en la gramática

   VAR


Estado 15 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 clases

    3 clases: CLASS LLAVEABRE LLAVECIERRA
    4       | CLASS LLAVEABRE listavar_decl LLAVECIERRA
    5       | CLASS LLAVEABRE listamethod_decl LLAVECIERRA
    6       | CLASS LLAVEABRE listavar_decl listamethod_decl LLAVECIERRA

    7 $@2: %empty

    8 var_decl: type $@2 listaID PUNTOYCOMA

    9 listaID: ID
   10        | listaID COMA ID

   11 listamethod_decl: method_decl
   12                 | listamethod_decl method_decl

   13 method_decl: type ID PARENTESISABRE PARENTESISCIERRA block
   14            | type ID PARENTESISABRE param_decl PARENTESISCIERRA block
   15            | VOID ID PARENTESISABRE PARENTESISCIERRA block
   16            | VOID ID PARENTESISABRE param_decl PARENTESISCIERRA block

   17 $@3: %empty

   18 param_decl: $@3 Nparam_decl

   19 Nparam_decl: type ID
   20            | Nparam_decl COMA type ID

   21 $@4: %empty

   22 block: $@4 Nblock

   23 Nblock: LLAVEABRE listavar_decl listastatement LLAVECIERRA
   24       | LLAVEABRE listavar_decl LLAVECIERRA
   25       | LLAVEABRE listastatement LLAVECIERRA
   26       | LLAVEABRE LLAVECIERRA

   27 listavar_decl: var_decl
   28              | listavar_decl var_decl

   29 listastatement: statement
   30               | listastatement statement

   31 type: INTRES
   32     | BOOL

   33 statement: IF PARENTESISABRE expr PARENTESISCIERRA THEN block
   34          | IF PARENTESISABRE expr PARENTESISCIERRA THEN block ELSE block
   35          | WHILE expr block
   36          | RETURN expr PUNTOYCOMA
   37          | RETURN PUNTOYCOMA
   38          | ID ASIG expr PUNTOYCOMA
   39          | method_call PUNTOYCOMA
   40          | PUNTOYCOMA
   41          | block

   42 method_call: ID PARENTESISABRE PARENTESISCIERRA
   43            | ID PARENTESISABRE param_call PARENTESISCIERRA

   44 param_call: ultparam_call

   45 ultparam_call: expr
   46              | ultparam_call COMA expr

   47 expr: expr MAS expr
   48     | expr MENOS expr
   49     | expr POR expr
   50     | expr DIVISION expr
   51     | expr MOD expr
   52     | expr MAYORQUE expr
   53     | expr MENORQUE expr
   54     | expr EQUALS expr
   55     | expr AND expr
   56     | expr OR expr
   57     | MENOS expr
   58     | EXCLAMACION expr
   59     | PARENTESISABRE expr PARENTESISCIERRA
   60     | ID
   61     | method_call
   62     | literal

   63 literal: INT
   64        | bool_literal

   65 bool_literal: TRUE
   66             | FALSE


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
INT (258) 63
ID (259) 9 10 13 14 15 16 19 20 38 42 43 60
VAR (260)
CLASS (261) 3 4 5 6
IF (262) 33 34
THEN (263) 33 34
ELSE (264) 34
TRUE (265) 65
FALSE (266) 66
RETURN (267) 36 37
VOID (268) 15 16
INTRES (269) 31
BOOL (270) 32
WHILE (271) 35
MAS (272) 47
MENOS (273) 48 57
POR (274) 49
EXCLAMACION (275) 58
DIVISION (276) 50
MOD (277) 51
COMA (278) 10 20 46
PUNTOYCOMA (279) 8 36 37 38 39 40
PARENTESISABRE (280) 13 14 15 16 33 34 42 43 59
PARENTESISCIERRA (281) 13 14 15 16 33 34 42 43 59
ASIG (282) 38
EQUALS (283) 54
MAYORQUE (284) 52
MENORQUE (285) 53
AND (286) 55
OR (287) 56
LLAVEABRE (288) 3 4 5 6 23 24 25 26
LLAVECIERRA (289) 3 4 5 6 23 24 25 26
UNARIO (290)


No terminales con las reglas donde aparecen

$accept (36)
    en la izquierda: 0
program (37)
    en la izquierda: 2, en la derecha: 0
$@1 (38)
    en la izquierda: 1, en la derecha: 2
clases (39)
    en la izquierda: 3 4 5 6, en la derecha: 2
var_decl (40)
    en la izquierda: 8, en la derecha: 27 28
$@2 (41)
    en la izquierda: 7, en la derecha: 8
listaID (42)
    en la izquierda: 9 10, en la derecha: 8 10
listamethod_decl (43)
    en la izquierda: 11 12, en la derecha: 5 6 12
method_decl (44)
    en la izquierda: 13 14 15 16, en la derecha: 11 12
param_decl (45)
    en la izquierda: 18, en la derecha: 14 16
$@3 (46)
    en la izquierda: 17, en la derecha: 18
Nparam_decl (47)
    en la izquierda: 19 20, en la derecha: 18 20
block (48)
    en la izquierda: 22, en la derecha: 13 14 15 16 33 34 35 41
$@4 (49)
    en la izquierda: 21, en la derecha: 22
Nblock (50)
    en la izquierda: 23 24 25 26, en la derecha: 22
listavar_decl (51)
    en la izquierda: 27 28, en la derecha: 4 6 23 24 28
listastatement (52)
    en la izquierda: 29 30, en la derecha: 23 25 30
type (53)
    en la izquierda: 31 32, en la derecha: 8 13 14 19 20
statement (54)
    en la izquierda: 33 34 35 36 37 38 39 40 41, en la derecha: 29
    30
method_call (55)
    en la izquierda: 42 43, en la derecha: 39 61
param_call (56)
    en la izquierda: 44, en la derecha: 43
ultparam_call (57)
    en la izquierda: 45 46, en la derecha: 44 46
expr (58)
    en la izquierda: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62,
    en la derecha: 33 34 35 36 38 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59
literal (59)
    en la izquierda: 63 64, en la derecha: 62
bool_literal (60)
    en la izquierda: 65 66, en la derecha: 64


Estado 0

    0 $accept: . program $end
    1 $@1: . %empty
    2 program: . $@1 clases

    $default  reduce usando la regla 1 ($@1)

    program  ir al estado 1
    $@1      ir al estado 2


Estado 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 program: $@1 . clases
    3 clases: . CLASS LLAVEABRE LLAVECIERRA
    4       | . CLASS LLAVEABRE listavar_decl LLAVECIERRA
    5       | . CLASS LLAVEABRE listamethod_decl LLAVECIERRA
    6       | . CLASS LLAVEABRE listavar_decl listamethod_decl LLAVECIERRA

    CLASS  desplazar e ir al estado 4

    clases  ir al estado 5


Estado 3

    0 $accept: program $end .

    $default  aceptar


Estado 4

    3 clases: CLASS . LLAVEABRE LLAVECIERRA
    4       | CLASS . LLAVEABRE listavar_decl LLAVECIERRA
    5       | CLASS . LLAVEABRE listamethod_decl LLAVECIERRA
    6       | CLASS . LLAVEABRE listavar_decl listamethod_decl LLAVECIERRA

    LLAVEABRE  desplazar e ir al estado 6


Estado 5

    2 program: $@1 clases .

    $default  reduce usando la regla 2 (program)


Estado 6

    3 clases: CLASS LLAVEABRE . LLAVECIERRA
    4       | CLASS LLAVEABRE . listavar_decl LLAVECIERRA
    5       | CLASS LLAVEABRE . listamethod_decl LLAVECIERRA
    6       | CLASS LLAVEABRE . listavar_decl listamethod_decl LLAVECIERRA
    8 var_decl: . type $@2 listaID PUNTOYCOMA
   11 listamethod_decl: . method_decl
   12                 | . listamethod_decl method_decl
   13 method_decl: . type ID PARENTESISABRE PARENTESISCIERRA block
   14            | . type ID PARENTESISABRE param_decl PARENTESISCIERRA block
   15            | . VOID ID PARENTESISABRE PARENTESISCIERRA block
   16            | . VOID ID PARENTESISABRE param_decl PARENTESISCIERRA block
   27 listavar_decl: . var_decl
   28              | . listavar_decl var_decl
   31 type: . INTRES
   32     | . BOOL

    VOID         desplazar e ir al estado 7
    INTRES       desplazar e ir al estado 8
    BOOL         desplazar e ir al estado 9
    LLAVECIERRA  desplazar e ir al estado 10

    var_decl          ir al estado 11
    listamethod_decl  ir al estado 12
    method_decl       ir al estado 13
    listavar_decl     ir al estado 14
    type              ir al estado 15


Estado 7

   15 method_decl: VOID . ID PARENTESISABRE PARENTESISCIERRA block
   16            | VOID . ID PARENTESISABRE param_decl PARENTESISCIERRA block

    ID  desplazar e ir al estado 16


Estado 8

   31 type: INTRES .

    $default  reduce usando la regla 31 (type)


Estado 9

   32 type: BOOL .

    $default  reduce usando la regla 32 (type)


Estado 10

    3 clases: CLASS LLAVEABRE LLAVECIERRA .

    $default  reduce usando la regla 3 (clases)


Estado 11

   27 listavar_decl: var_decl .

    $default  reduce usando la regla 27 (listavar_decl)


Estado 12

    5 clases: CLASS LLAVEABRE listamethod_decl . LLAVECIERRA
   12 listamethod_decl: listamethod_decl . method_decl
   13 method_decl: . type ID PARENTESISABRE PARENTESISCIERRA block
   14            | . type ID PARENTESISABRE param_decl PARENTESISCIERRA block
   15            | . VOID ID PARENTESISABRE PARENTESISCIERRA block
   16            | . VOID ID PARENTESISABRE param_decl PARENTESISCIERRA block
   31 type: . INTRES
   32     | . BOOL

    VOID         desplazar e ir al estado 7
    INTRES       desplazar e ir al estado 8
    BOOL         desplazar e ir al estado 9
    LLAVECIERRA  desplazar e ir al estado 17

    method_decl  ir al estado 18
    type         ir al estado 19


Estado 13

   11 listamethod_decl: method_decl .

    $default  reduce usando la regla 11 (listamethod_decl)


Estado 14

    4 clases: CLASS LLAVEABRE listavar_decl . LLAVECIERRA
    6       | CLASS LLAVEABRE listavar_decl . listamethod_decl LLAVECIERRA
    8 var_decl: . type $@2 listaID PUNTOYCOMA
   11 listamethod_decl: . method_decl
   12                 | . listamethod_decl method_decl
   13 method_decl: . type ID PARENTESISABRE PARENTESISCIERRA block
   14            | . type ID PARENTESISABRE param_decl PARENTESISCIERRA block
   15            | . VOID ID PARENTESISABRE PARENTESISCIERRA block
   16            | . VOID ID PARENTESISABRE param_decl PARENTESISCIERRA block
   28 listavar_decl: listavar_decl . var_decl
   31 type: . INTRES
   32     | . BOOL

    VOID         desplazar e ir al estado 7
    INTRES       desplazar e ir al estado 8
    BOOL         desplazar e ir al estado 9
    LLAVECIERRA  desplazar e ir al estado 20

    var_decl          ir al estado 21
    listamethod_decl  ir al estado 22
    method_decl       ir al estado 13
    type              ir al estado 15


Estado 15

    7 $@2: . %empty  [ID]
    8 var_decl: type . $@2 listaID PUNTOYCOMA
   13 method_decl: type . ID PARENTESISABRE PARENTESISCIERRA block
   14            | type . ID PARENTESISABRE param_decl PARENTESISCIERRA block

    ID  desplazar e ir al estado 23

    ID  [reduce usando la regla 7 ($@2)]

    $@2  ir al estado 24


Estado 16

   15 method_decl: VOID ID . PARENTESISABRE PARENTESISCIERRA block
   16            | VOID ID . PARENTESISABRE param_decl PARENTESISCIERRA block

    PARENTESISABRE  desplazar e ir al estado 25


Estado 17

    5 clases: CLASS LLAVEABRE listamethod_decl LLAVECIERRA .

    $default  reduce usando la regla 5 (clases)


Estado 18

   12 listamethod_decl: listamethod_decl method_decl .

    $default  reduce usando la regla 12 (listamethod_decl)


Estado 19

   13 method_decl: type . ID PARENTESISABRE PARENTESISCIERRA block
   14            | type . ID PARENTESISABRE param_decl PARENTESISCIERRA block

    ID  desplazar e ir al estado 23


Estado 20

    4 clases: CLASS LLAVEABRE listavar_decl LLAVECIERRA .

    $default  reduce usando la regla 4 (clases)


Estado 21

   28 listavar_decl: listavar_decl var_decl .

    $default  reduce usando la regla 28 (listavar_decl)


Estado 22

    6 clases: CLASS LLAVEABRE listavar_decl listamethod_decl . LLAVECIERRA
   12 listamethod_decl: listamethod_decl . method_decl
   13 method_decl: . type ID PARENTESISABRE PARENTESISCIERRA block
   14            | . type ID PARENTESISABRE param_decl PARENTESISCIERRA block
   15            | . VOID ID PARENTESISABRE PARENTESISCIERRA block
   16            | . VOID ID PARENTESISABRE param_decl PARENTESISCIERRA block
   31 type: . INTRES
   32     | . BOOL

    VOID         desplazar e ir al estado 7
    INTRES       desplazar e ir al estado 8
    BOOL         desplazar e ir al estado 9
    LLAVECIERRA  desplazar e ir al estado 26

    method_decl  ir al estado 18
    type         ir al estado 19


Estado 23

   13 method_decl: type ID . PARENTESISABRE PARENTESISCIERRA block
   14            | type ID . PARENTESISABRE param_decl PARENTESISCIERRA block

    PARENTESISABRE  desplazar e ir al estado 27


Estado 24

    8 var_decl: type $@2 . listaID PUNTOYCOMA
    9 listaID: . ID
   10        | . listaID COMA ID

    ID  desplazar e ir al estado 28

    listaID  ir al estado 29


Estado 25

   15 method_decl: VOID ID PARENTESISABRE . PARENTESISCIERRA block
   16            | VOID ID PARENTESISABRE . param_decl PARENTESISCIERRA block
   17 $@3: . %empty  [INTRES, BOOL]
   18 param_decl: . $@3 Nparam_decl

    PARENTESISCIERRA  desplazar e ir al estado 30

    $default  reduce usando la regla 17 ($@3)

    param_decl  ir al estado 31
    $@3         ir al estado 32


Estado 26

    6 clases: CLASS LLAVEABRE listavar_decl listamethod_decl LLAVECIERRA .

    $default  reduce usando la regla 6 (clases)


Estado 27

   13 method_decl: type ID PARENTESISABRE . PARENTESISCIERRA block
   14            | type ID PARENTESISABRE . param_decl PARENTESISCIERRA block
   17 $@3: . %empty  [INTRES, BOOL]
   18 param_decl: . $@3 Nparam_decl

    PARENTESISCIERRA  desplazar e ir al estado 33

    $default  reduce usando la regla 17 ($@3)

    param_decl  ir al estado 34
    $@3         ir al estado 32


Estado 28

    9 listaID: ID .

    $default  reduce usando la regla 9 (listaID)


Estado 29

    8 var_decl: type $@2 listaID . PUNTOYCOMA
   10 listaID: listaID . COMA ID

    COMA        desplazar e ir al estado 35
    PUNTOYCOMA  desplazar e ir al estado 36


Estado 30

   15 method_decl: VOID ID PARENTESISABRE PARENTESISCIERRA . block
   21 $@4: . %empty
   22 block: . $@4 Nblock

    $default  reduce usando la regla 21 ($@4)

    block  ir al estado 37
    $@4    ir al estado 38


Estado 31

   16 method_decl: VOID ID PARENTESISABRE param_decl . PARENTESISCIERRA block

    PARENTESISCIERRA  desplazar e ir al estado 39


Estado 32

   18 param_decl: $@3 . Nparam_decl
   19 Nparam_decl: . type ID
   20            | . Nparam_decl COMA type ID
   31 type: . INTRES
   32     | . BOOL

    INTRES  desplazar e ir al estado 8
    BOOL    desplazar e ir al estado 9

    Nparam_decl  ir al estado 40
    type         ir al estado 41


Estado 33

   13 method_decl: type ID PARENTESISABRE PARENTESISCIERRA . block
   21 $@4: . %empty
   22 block: . $@4 Nblock

    $default  reduce usando la regla 21 ($@4)

    block  ir al estado 42
    $@4    ir al estado 38


Estado 34

   14 method_decl: type ID PARENTESISABRE param_decl . PARENTESISCIERRA block

    PARENTESISCIERRA  desplazar e ir al estado 43


Estado 35

   10 listaID: listaID COMA . ID

    ID  desplazar e ir al estado 44


Estado 36

    8 var_decl: type $@2 listaID PUNTOYCOMA .

    $default  reduce usando la regla 8 (var_decl)


Estado 37

   15 method_decl: VOID ID PARENTESISABRE PARENTESISCIERRA block .

    $default  reduce usando la regla 15 (method_decl)


Estado 38

   22 block: $@4 . Nblock
   23 Nblock: . LLAVEABRE listavar_decl listastatement LLAVECIERRA
   24       | . LLAVEABRE listavar_decl LLAVECIERRA
   25       | . LLAVEABRE listastatement LLAVECIERRA
   26       | . LLAVEABRE LLAVECIERRA

    LLAVEABRE  desplazar e ir al estado 45

    Nblock  ir al estado 46


Estado 39

   16 method_decl: VOID ID PARENTESISABRE param_decl PARENTESISCIERRA . block
   21 $@4: . %empty
   22 block: . $@4 Nblock

    $default  reduce usando la regla 21 ($@4)

    block  ir al estado 47
    $@4    ir al estado 38


Estado 40

   18 param_decl: $@3 Nparam_decl .  [PARENTESISCIERRA]
   20 Nparam_decl: Nparam_decl . COMA type ID

    COMA  desplazar e ir al estado 48

    $default  reduce usando la regla 18 (param_decl)


Estado 41

   19 Nparam_decl: type . ID

    ID  desplazar e ir al estado 49


Estado 42

   13 method_decl: type ID PARENTESISABRE PARENTESISCIERRA block .

    $default  reduce usando la regla 13 (method_decl)


Estado 43

   14 method_decl: type ID PARENTESISABRE param_decl PARENTESISCIERRA . block
   21 $@4: . %empty
   22 block: . $@4 Nblock

    $default  reduce usando la regla 21 ($@4)

    block  ir al estado 50
    $@4    ir al estado 38


Estado 44

   10 listaID: listaID COMA ID .

    $default  reduce usando la regla 10 (listaID)


Estado 45

    8 var_decl: . type $@2 listaID PUNTOYCOMA
   21 $@4: . %empty  [LLAVEABRE]
   22 block: . $@4 Nblock
   23 Nblock: LLAVEABRE . listavar_decl listastatement LLAVECIERRA
   24       | LLAVEABRE . listavar_decl LLAVECIERRA
   25       | LLAVEABRE . listastatement LLAVECIERRA
   26       | LLAVEABRE . LLAVECIERRA
   27 listavar_decl: . var_decl
   28              | . listavar_decl var_decl
   29 listastatement: . statement
   30               | . listastatement statement
   31 type: . INTRES
   32     | . BOOL
   33 statement: . IF PARENTESISABRE expr PARENTESISCIERRA THEN block
   34          | . IF PARENTESISABRE expr PARENTESISCIERRA THEN block ELSE block
   35          | . WHILE expr block
   36          | . RETURN expr PUNTOYCOMA
   37          | . RETURN PUNTOYCOMA
   38          | . ID ASIG expr PUNTOYCOMA
   39          | . method_call PUNTOYCOMA
   40          | . PUNTOYCOMA
   41          | . block
   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA

    ID           desplazar e ir al estado 51
    IF           desplazar e ir al estado 52
    RETURN       desplazar e ir al estado 53
    INTRES       desplazar e ir al estado 8
    BOOL         desplazar e ir al estado 9
    WHILE        desplazar e ir al estado 54
    PUNTOYCOMA   desplazar e ir al estado 55
    LLAVECIERRA  desplazar e ir al estado 56

    $default  reduce usando la regla 21 ($@4)

    var_decl        ir al estado 11
    block           ir al estado 57
    $@4             ir al estado 38
    listavar_decl   ir al estado 58
    listastatement  ir al estado 59
    type            ir al estado 60
    statement       ir al estado 61
    method_call     ir al estado 62


Estado 46

   22 block: $@4 Nblock .

    $default  reduce usando la regla 22 (block)


Estado 47

   16 method_decl: VOID ID PARENTESISABRE param_decl PARENTESISCIERRA block .

    $default  reduce usando la regla 16 (method_decl)


Estado 48

   20 Nparam_decl: Nparam_decl COMA . type ID
   31 type: . INTRES
   32     | . BOOL

    INTRES  desplazar e ir al estado 8
    BOOL    desplazar e ir al estado 9

    type  ir al estado 63


Estado 49

   19 Nparam_decl: type ID .

    $default  reduce usando la regla 19 (Nparam_decl)


Estado 50

   14 method_decl: type ID PARENTESISABRE param_decl PARENTESISCIERRA block .

    $default  reduce usando la regla 14 (method_decl)


Estado 51

   38 statement: ID . ASIG expr PUNTOYCOMA
   42 method_call: ID . PARENTESISABRE PARENTESISCIERRA
   43            | ID . PARENTESISABRE param_call PARENTESISCIERRA

    PARENTESISABRE  desplazar e ir al estado 64
    ASIG            desplazar e ir al estado 65


Estado 52

   33 statement: IF . PARENTESISABRE expr PARENTESISCIERRA THEN block
   34          | IF . PARENTESISABRE expr PARENTESISCIERRA THEN block ELSE block

    PARENTESISABRE  desplazar e ir al estado 66


Estado 53

   36 statement: RETURN . expr PUNTOYCOMA
   37          | RETURN . PUNTOYCOMA
   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA
   47 expr: . expr MAS expr
   48     | . expr MENOS expr
   49     | . expr POR expr
   50     | . expr DIVISION expr
   51     | . expr MOD expr
   52     | . expr MAYORQUE expr
   53     | . expr MENORQUE expr
   54     | . expr EQUALS expr
   55     | . expr AND expr
   56     | . expr OR expr
   57     | . MENOS expr
   58     | . EXCLAMACION expr
   59     | . PARENTESISABRE expr PARENTESISCIERRA
   60     | . ID
   61     | . method_call
   62     | . literal
   63 literal: . INT
   64        | . bool_literal
   65 bool_literal: . TRUE
   66             | . FALSE

    INT             desplazar e ir al estado 67
    ID              desplazar e ir al estado 68
    TRUE            desplazar e ir al estado 69
    FALSE           desplazar e ir al estado 70
    MENOS           desplazar e ir al estado 71
    EXCLAMACION     desplazar e ir al estado 72
    PUNTOYCOMA      desplazar e ir al estado 73
    PARENTESISABRE  desplazar e ir al estado 74

    method_call   ir al estado 75
    expr          ir al estado 76
    literal       ir al estado 77
    bool_literal  ir al estado 78


Estado 54

   35 statement: WHILE . expr block
   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA
   47 expr: . expr MAS expr
   48     | . expr MENOS expr
   49     | . expr POR expr
   50     | . expr DIVISION expr
   51     | . expr MOD expr
   52     | . expr MAYORQUE expr
   53     | . expr MENORQUE expr
   54     | . expr EQUALS expr
   55     | . expr AND expr
   56     | . expr OR expr
   57     | . MENOS expr
   58     | . EXCLAMACION expr
   59     | . PARENTESISABRE expr PARENTESISCIERRA
   60     | . ID
   61     | . method_call
   62     | . literal
   63 literal: . INT
   64        | . bool_literal
   65 bool_literal: . TRUE
   66             | . FALSE

    INT             desplazar e ir al estado 67
    ID              desplazar e ir al estado 68
    TRUE            desplazar e ir al estado 69
    FALSE           desplazar e ir al estado 70
    MENOS           desplazar e ir al estado 71
    EXCLAMACION     desplazar e ir al estado 72
    PARENTESISABRE  desplazar e ir al estado 74

    method_call   ir al estado 75
    expr          ir al estado 79
    literal       ir al estado 77
    bool_literal  ir al estado 78


Estado 55

   40 statement: PUNTOYCOMA .

    $default  reduce usando la regla 40 (statement)


Estado 56

   26 Nblock: LLAVEABRE LLAVECIERRA .

    $default  reduce usando la regla 26 (Nblock)


Estado 57

   41 statement: block .

    $default  reduce usando la regla 41 (statement)


Estado 58

    8 var_decl: . type $@2 listaID PUNTOYCOMA
   21 $@4: . %empty  [LLAVEABRE]
   22 block: . $@4 Nblock
   23 Nblock: LLAVEABRE listavar_decl . listastatement LLAVECIERRA
   24       | LLAVEABRE listavar_decl . LLAVECIERRA
   28 listavar_decl: listavar_decl . var_decl
   29 listastatement: . statement
   30               | . listastatement statement
   31 type: . INTRES
   32     | . BOOL
   33 statement: . IF PARENTESISABRE expr PARENTESISCIERRA THEN block
   34          | . IF PARENTESISABRE expr PARENTESISCIERRA THEN block ELSE block
   35          | . WHILE expr block
   36          | . RETURN expr PUNTOYCOMA
   37          | . RETURN PUNTOYCOMA
   38          | . ID ASIG expr PUNTOYCOMA
   39          | . method_call PUNTOYCOMA
   40          | . PUNTOYCOMA
   41          | . block
   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA

    ID           desplazar e ir al estado 51
    IF           desplazar e ir al estado 52
    RETURN       desplazar e ir al estado 53
    INTRES       desplazar e ir al estado 8
    BOOL         desplazar e ir al estado 9
    WHILE        desplazar e ir al estado 54
    PUNTOYCOMA   desplazar e ir al estado 55
    LLAVECIERRA  desplazar e ir al estado 80

    $default  reduce usando la regla 21 ($@4)

    var_decl        ir al estado 21
    block           ir al estado 57
    $@4             ir al estado 38
    listastatement  ir al estado 81
    type            ir al estado 60
    statement       ir al estado 61
    method_call     ir al estado 62


Estado 59

   21 $@4: . %empty  [LLAVEABRE]
   22 block: . $@4 Nblock
   25 Nblock: LLAVEABRE listastatement . LLAVECIERRA
   30 listastatement: listastatement . statement
   33 statement: . IF PARENTESISABRE expr PARENTESISCIERRA THEN block
   34          | . IF PARENTESISABRE expr PARENTESISCIERRA THEN block ELSE block
   35          | . WHILE expr block
   36          | . RETURN expr PUNTOYCOMA
   37          | . RETURN PUNTOYCOMA
   38          | . ID ASIG expr PUNTOYCOMA
   39          | . method_call PUNTOYCOMA
   40          | . PUNTOYCOMA
   41          | . block
   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA

    ID           desplazar e ir al estado 51
    IF           desplazar e ir al estado 52
    RETURN       desplazar e ir al estado 53
    WHILE        desplazar e ir al estado 54
    PUNTOYCOMA   desplazar e ir al estado 55
    LLAVECIERRA  desplazar e ir al estado 82

    $default  reduce usando la regla 21 ($@4)

    block        ir al estado 57
    $@4          ir al estado 38
    statement    ir al estado 83
    method_call  ir al estado 62


Estado 60

    7 $@2: . %empty
    8 var_decl: type . $@2 listaID PUNTOYCOMA

    $default  reduce usando la regla 7 ($@2)

    $@2  ir al estado 24


Estado 61

   29 listastatement: statement .

    $default  reduce usando la regla 29 (listastatement)


Estado 62

   39 statement: method_call . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 84


Estado 63

   20 Nparam_decl: Nparam_decl COMA type . ID

    ID  desplazar e ir al estado 85


Estado 64

   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   42            | ID PARENTESISABRE . PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA
   43            | ID PARENTESISABRE . param_call PARENTESISCIERRA
   44 param_call: . ultparam_call
   45 ultparam_call: . expr
   46              | . ultparam_call COMA expr
   47 expr: . expr MAS expr
   48     | . expr MENOS expr
   49     | . expr POR expr
   50     | . expr DIVISION expr
   51     | . expr MOD expr
   52     | . expr MAYORQUE expr
   53     | . expr MENORQUE expr
   54     | . expr EQUALS expr
   55     | . expr AND expr
   56     | . expr OR expr
   57     | . MENOS expr
   58     | . EXCLAMACION expr
   59     | . PARENTESISABRE expr PARENTESISCIERRA
   60     | . ID
   61     | . method_call
   62     | . literal
   63 literal: . INT
   64        | . bool_literal
   65 bool_literal: . TRUE
   66             | . FALSE

    INT               desplazar e ir al estado 67
    ID                desplazar e ir al estado 68
    TRUE              desplazar e ir al estado 69
    FALSE             desplazar e ir al estado 70
    MENOS             desplazar e ir al estado 71
    EXCLAMACION       desplazar e ir al estado 72
    PARENTESISABRE    desplazar e ir al estado 74
    PARENTESISCIERRA  desplazar e ir al estado 86

    method_call    ir al estado 75
    param_call     ir al estado 87
    ultparam_call  ir al estado 88
    expr           ir al estado 89
    literal        ir al estado 77
    bool_literal   ir al estado 78


Estado 65

   38 statement: ID ASIG . expr PUNTOYCOMA
   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA
   47 expr: . expr MAS expr
   48     | . expr MENOS expr
   49     | . expr POR expr
   50     | . expr DIVISION expr
   51     | . expr MOD expr
   52     | . expr MAYORQUE expr
   53     | . expr MENORQUE expr
   54     | . expr EQUALS expr
   55     | . expr AND expr
   56     | . expr OR expr
   57     | . MENOS expr
   58     | . EXCLAMACION expr
   59     | . PARENTESISABRE expr PARENTESISCIERRA
   60     | . ID
   61     | . method_call
   62     | . literal
   63 literal: . INT
   64        | . bool_literal
   65 bool_literal: . TRUE
   66             | . FALSE

    INT             desplazar e ir al estado 67
    ID              desplazar e ir al estado 68
    TRUE            desplazar e ir al estado 69
    FALSE           desplazar e ir al estado 70
    MENOS           desplazar e ir al estado 71
    EXCLAMACION     desplazar e ir al estado 72
    PARENTESISABRE  desplazar e ir al estado 74

    method_call   ir al estado 75
    expr          ir al estado 90
    literal       ir al estado 77
    bool_literal  ir al estado 78


Estado 66

   33 statement: IF PARENTESISABRE . expr PARENTESISCIERRA THEN block
   34          | IF PARENTESISABRE . expr PARENTESISCIERRA THEN block ELSE block
   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA
   47 expr: . expr MAS expr
   48     | . expr MENOS expr
   49     | . expr POR expr
   50     | . expr DIVISION expr
   51     | . expr MOD expr
   52     | . expr MAYORQUE expr
   53     | . expr MENORQUE expr
   54     | . expr EQUALS expr
   55     | . expr AND expr
   56     | . expr OR expr
   57     | . MENOS expr
   58     | . EXCLAMACION expr
   59     | . PARENTESISABRE expr PARENTESISCIERRA
   60     | . ID
   61     | . method_call
   62     | . literal
   63 literal: . INT
   64        | . bool_literal
   65 bool_literal: . TRUE
   66             | . FALSE

    INT             desplazar e ir al estado 67
    ID              desplazar e ir al estado 68
    TRUE            desplazar e ir al estado 69
    FALSE           desplazar e ir al estado 70
    MENOS           desplazar e ir al estado 71
    EXCLAMACION     desplazar e ir al estado 72
    PARENTESISABRE  desplazar e ir al estado 74

    method_call   ir al estado 75
    expr          ir al estado 91
    literal       ir al estado 77
    bool_literal  ir al estado 78


Estado 67

   63 literal: INT .

    $default  reduce usando la regla 63 (literal)


Estado 68

   42 method_call: ID . PARENTESISABRE PARENTESISCIERRA
   43            | ID . PARENTESISABRE param_call PARENTESISCIERRA
   60 expr: ID .  [MAS, MENOS, POR, DIVISION, MOD, COMA, PUNTOYCOMA, PARENTESISCIERRA, EQUALS, MAYORQUE, MENORQUE, AND, OR, LLAVEABRE]

    PARENTESISABRE  desplazar e ir al estado 64

    $default  reduce usando la regla 60 (expr)


Estado 69

   65 bool_literal: TRUE .

    $default  reduce usando la regla 65 (bool_literal)


Estado 70

   66 bool_literal: FALSE .

    $default  reduce usando la regla 66 (bool_literal)


Estado 71

   42 method_call: . ID PARENTESISABRE PARENTESISCIERRA
   43            | . ID PARENTESISABRE param_call PARENTESISCIERRA
   47 expr: . expr MAS expr
   48     | . expr MENOS expr
   49     | . expr POR expr
   50     | . expr DIVISION expr
   51     | . expr MOD expr
   52     | . expr MAYORQUE expr
   53     | . expr MENORQUE expr
   54     | . expr EQUALS expr
   55     | . expr AND expr
   56     | . expr OR expr
   57     | . MENOS expr
   57     | MENOS . expr
   58     | . EXCLAMACION expr
   59     | . PARENTESISABRE expr PARENTESISCIERRA
   60     | . ID
   61     | . method_call
   62     | . literal
   63 literal: . INT
   64        | . bool_literal
   65 bool_literal: . TRUE
   66             | . FALSE

    INT             desplazar e ir al estado 67
    ID              desplazar e ir al estado 68
    TRUE            desplazar e ir al estado 69
    FALSE           desplazar e ir al estado 70
    MENOS           desplazar e ir al estado 71
    EXCLAMACION     desplazar e ir al estado 72
    PARENTESISABRE  desplazar e ir al estado 74

    method_call   ir al estado 75
    expr          ir al estado 92
    literal       ir al estado 77
    bool_literal  ir al estado 78


Estado 72
